--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "mysql2": "^3.3.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.16",
-    "yarn": "^1.22.19"
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
