--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
@@ -28,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/hapi__joi": "^17.1.10",
     "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
